--- a/jan7/index2.css
+++ b/jan7/index2.css
@@ -1,58 +1,37 @@
-body {
-    background-color: black;
-}
-header{
+body{
     margin: 0px;
-    background-color: black;
-    width: 2000px;
-}
-#heading {
-    height: 80px;
-    background-color: black;
-    color: whitesmoke;
-    text-align: center;
-   padding-top: 40px;
-
-}
-
-marquee {
-    height: 40px;
-    padding-top: 15px;
-    background-color: rgb(145, 9, 9);
-    border-radius: 200px;
-}
-
-#bold {
-    color: whitesmoke;
-}
-
-#images {
-    border-radius: 90px;
-    background-color: rgb(145, 9, 9);
-    text-align: center;
-}
-
-img {
-    border-radius: 10%;
-}
-
-#aspects {
-    background-color: black;
-}
-
-h1 {
-    background-color: rgb(145, 9, 9);
-    color: white;
-    text-align: center;
-    border-radius: 40px;
-}
-
-p {
-    color: whitesmoke;
 }
 header{
-    position: fixed;
+    background-color: #60efff;
+    height: 120px;
 }
-main{
-    padding-top: 250px;
+#head{
+    position: fixed;
+    background-color: #60efff;
+    width: 1540;
+    
+}
+#intro{
+    float: left;
+    font-size: 40px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+#port{
+    float: right;
+}
+#aspects{
+    float: left;
+    width: 50%;
+    text-align: center;
+    
+}
+#table{
+    width: 50%px;
+    float: right;
+}
+footer{
+    height: 100px;
+    background-color: black;
+    color: whitesmoke;
+    padding:10px
 }
