--- a/jan25/index.css
+++ b/jan25/index.css
@@ -3,7 +3,7 @@
   }
   
   body {
-      background-color: aqua;
+      background-color: cornsilk;
     display: flex;
     justify-content: center;
     align-items: center;
